--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,16 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         google()
         jcenter()
         
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
+
+        // Add this line
+        classpath 'com.google.gms:google-services:4.3.3'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,8 +20,10 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
         
     }
 }
